--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Xiaoyue Ma"
 title_separator          : "-"
 name                     : &name "Xiaoyue Ma"
-description              : &description "Ph.D student in Computer Science at Geogre Mason University"
+description              : &description "Ph.D. in Computer Science at George Mason University"
 url                      : https://agatah2333.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Xiaoyue Ma"
   # pronouns         : # example: "she/her"  
-  bio              : "Ph.D student in Computer Science"
+  bio              : "Ph.D in Computer Science"
   # location         : "Earth"
   # employer         : "Red Brick University"
   uri              : # URL
